--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,7 +4,7 @@ html {
 
 body {
     font-family: "Helvetica Neue", "PingFangSC-Light", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
-    color: #5E5E5E;
+    color: #535f6f;
     background-color: #f3f3f3;
 }
 
@@ -272,6 +272,7 @@ a {
     flex: 1;
     font-size: 18px;
     line-height: 34px;
+    color: #2196F3;
 }
 
 .category-list .list-head .part-right {
@@ -335,7 +336,7 @@ a {
 
 .category-list .list-head .list-actions > span,
 .category-list .list-head .list-actions > span > a {
-    color: #818f9a;
+    color: #6a8192;
 }
 
 .category-list .list-head .list-actions > span:hover,
@@ -366,11 +367,12 @@ a {
 }
 
 .category-list .list-content .item:hover {
-    background: #f9f9f9;
+    background: #fbfbfbfb;
 }
 
 .category-list .list-content .item .item-head {
     font-size: 18px;
+    font-weight: bold;
 }
 
 .category-list .list-content .item .item-head .category-name {
@@ -394,19 +396,29 @@ a {
 .category-list .list-content .item.is-mine:before {
     content: '';
     position: absolute;
-    width: 2px;
-    height: calc(100% - 10px - 1px);
-    top: 5px;
-    left: 0px;
-    background: #90cdff;
+    width: 10px;
+    border-radius: 0 100px 0 0;
+    height: 10px;
+    bottom: 0;
+    left: 0;
+    background: #2196f3;
+}
+
+.category-list .list-content .item.is-mine .item-head .category-name {
+    color: #2196f3;
+}
+
+.category-list .list-content .item.is-completed .item-head .category-name {
+    color: #57D59F;
 }
 
 .category-list .list-content .item.is-completed .item-head:before {
-    content: '\f108';
+    content: '\f26b';
     font-family: 'Material-Design-Iconic-Font';
     display: inline-block;
-    margin-right: 15px;
-    color: #ffc107;
+    margin-right: 8px;
+    color: #57D59F;
+    padding-right: 6px;
 }
 
 .category-list .list-loading {
@@ -604,7 +616,6 @@ a {
     margin-right: 10px;
     font-size: 100%;
     color: #2196F3;
-    font-weight: bold;
     white-space: nowrap;
     word-break: break-all;
 }
@@ -619,6 +630,7 @@ a {
     border: 1px solid transparent;
     border-radius: 1px;
     transition: all .3s ease;
+    font-weight: bold;
 }
 
 .editor .editor-inserter .current-book-info .numbering:focus {
@@ -637,7 +649,7 @@ a {
     background: #FFF;
     line-height: initial;
     outline: none;
-    border: 1px solid #f3f3f3;
+    border: 1px solid #e0e0e0;
 }
 
 .editor .editor-inserter .pre-book-btn:hover,
@@ -674,13 +686,13 @@ a {
     height: 35px;
     line-height: 35px;
     align-items: center;
-    margin: 0 10px;
+    padding: 0 10px;
 }
 
 .editor .editor-inserter .fields-inputs > .form-control {
     display: inline-block;
     flex: 1;
-    border: 1px solid #f3f3f3;
+    border: 1px solid #e0e0e0;
     box-shadow: none;
     border-radius: 1px;
     height: 35px;
@@ -767,19 +779,22 @@ a {
 .editor .editor-book-list .list-content .list-item {
     display: flex;
     flex-direction: row;
-    border-bottom: 1px solid #f5f5f5;
+    border: 1px solid transparent;
     position: relative;
     overflow: hidden;
     transition: all 0.15s ease;
 }
 
+
 .editor .editor-book-list .list-content .list-item:hover {
-    background: #f7f7f7;
+    color: #2196f3;
 }
 
 .editor .editor-book-list .list-content .list-item.edit-focused {
     color: #2196f3;
+    font-weight: bold;
     box-shadow: 0 1px 2px rgba(0,0,0,.035);
+    border: 1px solid #f1f1f1;
 }
 
 .editor .editor-book-list .list-content .list-item.edit-focused:before {
@@ -793,6 +808,7 @@ a {
 }
 
 .editor .editor-book-list .list-content .list-item > span {
+    position: relative;
     flex: 1;
     padding: 10px 0;
     padding-left: 25px;
@@ -814,8 +830,12 @@ a {
     user-select: none;
 }
 
-.editor .editor-book-list .list-content .list-item > span.numbering:hover {
+.editor .editor-book-list .list-content .list-item > span.numbering:hover:before {
     color: #2196f3;
+    position: absolute;
+    content: '\f2fb';
+    font-family: 'Material-Design-Iconic-Font';
+    left: 13px;
 }
 
 /* notify */
@@ -1109,12 +1129,19 @@ a {
 }
 
 .help-layer-note {
+    z-index: 998;
     position: absolute;
-    background: #ffffffe0;
+    background: #ffffffd6;
     padding: 12px 20px;
     width: 240px;
     margin-left: -7px;
     margin-top: 5px;
+    border-radius: 3px;
+}
+
+.help-layer-note:hover {
+    background: #ffffff;
+    z-index: 999;
 }
 
 .help-layer-note:after {
